<resources>
    <!-- App name -->
    <string name="app_name">Safe &amp; Secure Tip Calculator</string>
    
    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="about_menu_action">About Palindrome Tipping</string>
    <string name="action_upgrade_menu">Remove Ads</string>

    <!-- Preferences -->
    <string name="pref_is_first_launch_key" translatable="false">firstLaunch</string>
    <string name="pref_tip_label">Default tip percent</string>
    <integer name="pref_tip_default" translatable="false">17</integer>
    <string name="pref_tip_key" translatable="false">defaultTip</string>
    <string name="pref_method_label">Calculation method</string>
    <string name="pref_method_default" translatable="false">palindrome</string>
    <string name="pref_method_key" translatable="false">method</string>
    <string-array name="tipping_method_array_entries" translatable="false">
        <item>Normal</item>
        <item>Palindrome</item>
    </string-array>
    <string-array name="tipping_method_array_vaues" translatable="false">
        <item>normal</item>
        <item>palindrome</item>
    </string-array>

    <!-- Calculator fragment -->
    <string name="bill_amount">"Bill  $"</string>
    <string name="tip_amount">"Tip  "</string>
    <string name="total_amount">"Total  $"</string>
    <string name="split_total">Split the check?</string>
    <string name="number_people">"Number of people   "</string>
    <string name="each_person_pays">"Each pays  $"</string>
    <string name="clear_button">clear</string>
    <string name="save_button">save to history</string>
    <string name="percent_sign">"%  $"</string>
    <string name="toggle_content_description">Add or remove check split section.</string>
    <string name="toast_store_successful">Transaction saved to history.</string>
    <string name="toast_store_failed">Sorry! Something went wrong.</string>
    <string name="alert_dialog_toggle_title">Use Normal Calculation to Split Check</string>
    <string name="alert_dialog_toggle_message">We cannot maintain the secure palindrome pattern for each persons total without altering the original total. To split the check, temporarily switch to
                normal calculation by pressing the corresponding button below or change your default calculation method in settings.</string>
    <string name="alert_dialog_toggle_positive">OK</string>
    <string name="alert_dialog_toggle_neutral">Use normal calculation</string>
    <string name="picker_dialog_percent_title">Tip percentage</string>
    <string name="picker_dialog_people_title">Number of people</string>
    <string name="rounding_warning">*Actual tip percentage used to reach pattern: %1$s%%</string>

    <!-- Detail activity -->
    <string name="detail_date">"Transaction date:   "</string>
    <string name="detail_you_paid">"You paid:  "</string>
    <string name="detail_number_people">"Number of people:  "</string>
    <string name="detail_calculated_total">"Calculated total:  "</string>
    <string name="detail_bill">"Bill:  "</string>
    <string name="detail_method">"Calculation method:  "</string>
    <string name="detail_tip_amount">"Tip amount:  "</string>
    <string name="detail_tip_percent">"Tip percent:  "</string>

    <!-- History fragment -->
    <string name="delete_entry_button">Delete entry</string>
    <string name="delete_content_description">Delete the history entry on this line.</string>
    <string name="toast_delete_successful">Entry deleted.</string>
    <string name="alert_dialog_delete_title">Delete History Entry?</string>
    <string name="alert_dialog_delete_message">Are you sure you want to delete this entry? This action cannot be undone.</string>
    <string name="alert_dialog_delete_positive">Delete</string>
    <string name="alert_dialog_delete_negative">Cancel</string>
    <string name="date_item_today">Today</string>
    <string name="no_entries_string">No history to display. \nSave a total from the calculator page to have it appear here!</string>

    <!-- Demo screen -->
    <string name="demo_summary_string">Make your restaurant transactions easily recognizable! \n\nType in your bill amount and ideal
        tip percentage and we calculate your total using our secure pattern.</string>
    <string name="demo_summary2_string">See the about page for a description of the pattern! \n\nTap to get started!</string>

    <!-- About activity -->
    <string name="example_content_description">Example of palindrome tipping</string>
    <string name="about_body">In short, palindrome tipping is the secure way to tip.
        \n\n
        When you pay for a meal
        using a credit card, there is an opportunity for anyone handling your receipt to commit fraud and modify your written tip
        and total amounts. The only way to combat this is to keep a receipt and then compare the charge once it posts to your account.
        \n\n
        Palindrome tipping offers a calculation method that will make noticing these fraudulent charges very easy.
        \n\n
        We calculate your total normally using your preferred tipping percentage and then apply the palindrome pattern. The pattern is simply
        mirroring the numbers in the ones and tens place and setting that mirrored amount on the right side of the decimal.

    </string>
    <string name="about_body2">Since we are altering the total we include a message telling you the actual tip percentage used.\n\nThe power of palindrome tipping lies in creating a pattern for your total that you will be able to instantly recognize when scanning
        your credit card statement.
        \n\n
        If you notice a charge to your credit card from a restaurant and it does not follow the palindrome pattern then you know
        that your intended total was altered.
    </string>

    <string name="limitations_header">Limitations</string>

    <string name="about_limitations">Due to each whole dollar value corresponding to a single palindrome pattern  ($3.00 = $3.30, $10.00 = $10.01, $134.00 = $134.43, etc..), at low
        amounts (usually less than $10), you can run into large amounts of rounding to reach a palindrome pattern that is greater than the original bill.
        \n\n
        Bill: $1.15 \n
        Tip at 17 percent: $0.20 \n
        Total: $1.35 \n
        \nTo make this total follow the palindrome pattern we would need to round the total up to $2.20 since rounding down to $1.10 would be less than the original bill.
        Rounding to a total of $2.20 would mean a 91 percent tip of $1.05! \n\n The pattern also does not work for any amount less than $1.00 because there is nothing to mirror ($0.23 mirrored is $0.00).
        In these cases you can switch to normal tipping from settings.
    </string>

    <!-- Upgrade dialog -->
    <string name="upgrade_title">Like Our App? Don\'t like Ads?</string>
    <string name="upgrade_body">Upgrade to the pro version to remove ads and support the developers!</string>
    <string name="upgrade_button_content">Get it on Google Play.</string>
    <string name="upgrade_pro_image_context">Safe &amp; Secure Tip Calculator Pro</string>
    <string name="upgrade_negative">No Thanks</string>

    <!-- Advert IDs -->
    <string name="main_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
