<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

    <TextView
        android:id="@+id/upgrade_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_title"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:background="@drawable/dialog_textview_background"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/upgrade_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/upgrade_body"
        android:layout_below="@id/upgrade_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upgrade_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/upgrade_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/upgrade_pro_image_context"
            android:src="@drawable/pro_launcher_icon"

            />

        <ImageButton
            android:id="@+id/upgrade_button"
            android:layout_width="125dp"
            android:layout_height="37dp"
            android:layout_toRightOf="@id/upgrade_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/googel_play_badge"
            android:contentDescription="@string/upgrade_button_content"/>

    </RelativeLayout>


</RelativeLayout>