<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    
    >
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator_layout"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/base_calc_layout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/bill_amount_label"
                android:text="@string/bill_amount"
                style="@style/labelText"
                android:layout_alignRight="@+id/tip_edit_and_percent"
                android:layout_alignBaseline="@+id/bill_amount_edit"
                />

            <EditText
                android:id="@+id/bill_amount_edit"
                style="@style/editField"
                android:inputType="numberDecimal"
                android:layout_toRightOf="@id/bill_amount_label"
                />

                <LinearLayout
                    android:id="@+id/tip_edit_and_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bill_amount_edit"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tip_percent_label"
                        android:text="@string/tip_amount"
                        style="@style/labelText"
                        />

                    <EditText
                        android:id="@+id/tip_percent_edit"
                        style="@style/defaultTextFormat"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:minEms="1"
                        android:selectAllOnFocus="true"
                        android:gravity="end"
                        android:background="@drawable/edit_text_border"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        />

                    <TextView

                        android:id="@+id/percent_sign"
                        android:text="@string/percent_sign"
                        style="@style/labelText"

                        />
                </LinearLayout>

            <EditText
                android:id="@+id/tip_amount_edit"
                style="@style/editField"
                android:inputType="numberDecimal"
                android:layout_below="@id/bill_amount_edit"
                android:layout_toRightOf="@+id/bill_amount_label"
                android:layout_toEndOf="@+id/bill_amount_label" />

            <TextView
                android:id="@+id/total_amount_label"
                android:text="@string/total_amount"
                style="@style/labelText"
                android:layout_below="@id/tip_amount_edit"
                android:layout_alignBaseline="@+id/total_amount_edit"
                android:layout_alignRight="@id/tip_edit_and_percent"
                />

            <EditText
                android:id="@+id/total_amount_edit"
                style="@style/editField"
                android:background="@drawable/edit_text_border_important"
                android:inputType="numberDecimal"
                android:layout_below="@id/tip_amount_edit"
                android:layout_toRightOf="@id/total_amount_label"
                />

    </RelativeLayout>

    <TextView
        android:id="@+id/rounding_warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/base_calc_layout"
        android:text="@string/rounding_warning"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/split_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rounding_warning_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/split_check_label"
            android:text="@string/split_total"
            style="@style/labelText"
            android:textSize="30sp"
            android:layout_centerVertical="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_black_24dp"
            android:id="@+id/split_toggle_button"
            android:contentDescription="@string/toggle_content_description"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@id/split_check_label"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/split_check_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/split_button_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        >

            <TextView
                android:id="@+id/number_people_label"
                android:text="@string/number_people"
                style="@style/labelText"
                android:textSize="25sp"
                android:layout_alignBaseline="@+id/number_people_edit"
                />

            <EditText
                android:id="@+id/number_people_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                style="@style/defaultTextFormat"
                android:minEms="1"
                android:background="@drawable/edit_text_border"
                android:layout_toRightOf="@id/number_people_label"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                />


            <TextView
                android:id="@+id/each_pays_label"
                android:text="@string/each_person_pays"
                style="@style/labelText"
                android:layout_below="@id/number_people_edit"
                android:layout_alignBaseline="@+id/each_pays_edit"
                android:layout_alignRight="@id/number_people_label"
                android:textSize="25sp"
                />

            <EditText
                android:id="@+id/each_pays_edit"
                style="@style/editField"
                android:background="@drawable/edit_text_border_important"
                android:layout_below="@id/number_people_edit"
                android:layout_toRightOf="@id/each_pays_label"
                />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/split_check_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/save_button"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button"
            android:id="@+id/clear_button"
            android:layout_toRightOf="@id/save_button"
            android:textStyle="bold"
            />

    </RelativeLayout>


</RelativeLayout>
</ScrollView>