<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/entry_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/detail_date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/detail_date_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_date" />

                <TextView
                    android:id="@+id/detail_date_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/detail_date_label"
                    android:text="Nov 12, 2015" />

                <TextView
                    android:id="@+id/detail_time_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/detail_date_textView"
                    android:layout_below="@+id/detail_date_textView"
                    android:text="1:18 PM" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_you_paid_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail_you_paid" />

                <TextView
                    android:id="@+id/detail_you_paid_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$53.35"
                    android:textColor="#000000"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/detail_bill_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/detail_method_label"
                    android:text="@string/detail_bill" />

                <TextView
                    android:id="@+id/detail_bill_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/detail_bill_label"
                    android:text="$45.00" />

                <TextView
                    android:id="@+id/detail_tip_percent_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/detail_method_label"
                    android:layout_below="@+id/detail_bill_textView"
                    android:text="@string/detail_tip_percent" />

                <TextView
                    android:id="@+id/detail_tip_percent_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_bill_textView"
                    android:layout_toRightOf="@+id/detail_tip_percent_label"
                    android:text="19%" />

                <TextView
                    android:id="@+id/detail_tip_amount_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/detail_method_label"
                    android:layout_below="@+id/detail_tip_percent_label"
                    android:text="@string/detail_tip_amount" />

                <TextView
                    android:id="@+id/detail_tip_amount_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_tip_percent_label"
                    android:layout_toRightOf="@+id/detail_tip_amount_label"
                    android:text="$8.35" />

                <TextView
                    android:id="@+id/detail_total_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/detail_method_label"
                    android:layout_below="@id/detail_tip_amount_label"
                    android:text="@string/detail_calculated_total" />

                <TextView
                    android:id="@+id/detail_total_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_tip_amount_label"
                    android:layout_toRightOf="@+id/detail_total_label"
                    android:text="$53.35" />

                <TextView
                    android:id="@+id/detail_method_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_total_label"
                    android:text="@string/detail_method" />

                <TextView
                    android:id="@+id/detail_method_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_total_label"
                    android:layout_toRightOf="@+id/detail_method_label"
                    android:text="Palindrome" />

                <TextView
                    android:id="@+id/detail_number_label"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/detail_method_label"
                    android:layout_below="@+id/detail_method_label"
                    android:text="@string/detail_number_people" />

                <TextView
                    android:id="@+id/detail_number_textView"
                    style="@style/historyEntryTextFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_method_label"
                    android:layout_toRightOf="@+id/detail_number_label"
                    android:text="1" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>